fix aspect ratio in unsplash image search
test plan:
 - set up unsplash plugin
 - do a course card image search for "cat"
 - notice the vertically-cropped images aren't stretched
 - do a course card image search for "panorama"
 - notice the horizontally-cropped images aren't squished

fixes ADMIN-2667

Reviewed-on: https://gerrit.instructure.com/193792
Tested-by: Jenkins
QA-Review: Carl Kibler <ckibler@instructure.com>
Product-Review: Laura Leavitt <lleavitt@instructure.com>

--- a/app/stylesheets/components/_imageSearch.scss
+++ b/app/stylesheets/components/_imageSearch.scss
@@ -39,7 +39,6 @@
 
 .ImageSearch__item {
   height: $ic-sp*10;
-  width: $ic-sp*15;
   margin: $ic-sp;
   position: relative;
   background: transparent;
@@ -54,10 +53,6 @@
 }
 
 .ImageSearch__display {
-  background-color: $ic-color-neutral;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  width: 100%;
+  width: auto;
   height: 100%;
 }
